# gravitate-desktop-client

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.md  INSTALL.md  README.md
app/backend/: CMakeLists.txt  abstractdownloader.cpp  abstractdownloader.h  authenticator.cpp  authenticator.h  backendprovider.h  downloadprogressdialog.cpp  downloadprogressdialog.h  localfilecache.cpp  localfilecache.h  networkbackendprovider.cpp  networkbackendprovider.h  sparqlresults.cpp  sparqlresults.h
app/backend/base/: CMakeLists.txt  backendfactorybase.cpp  backendfactorybase.h  clipgroupsprovider.h  itemlistproviderbase.h  jobmanagerbase.h  loginprovider.h  metadata3drequest.cpp  metadata3drequest.h  metadatachprovider.h
app/backend/gravitate/: CMakeLists.txt  backendfactorygravitate.cpp  backendfactorygravitate.h  gravitatebackend.cpp  gravitatebackend.h  gravitatebackendconf.h  gravitateclipgroupsprovider.cpp  gravitateclipgroupsprovider.h  gravitateextrametadata.cpp  gravitateextrametadata.h  gravitateitemlistprovider.cpp  gravitateitemlistprovider.h  gravitatejobmanager.cpp  gravitatejobmanager.h  gravitatejobwatcher.cpp  gravitatejobwatcher.h  gravitateloginprovider.cpp  gravitateloginprovider.h  gravitatemetadatachprovider.cpp  gravitatemetadatachprovider.h  gravitatesparql.cpp  gravitatesparql.h  gravitatethumbnailprovider.cpp  gravitatethumbnailprovider.h  metadata3drequestgravitate.cpp  metadata3drequestgravitate.h
app/browse/: CMakeLists.txt  browsedialog.cpp  browsedialog.h  browsedialog.ui  datasetfetchmodel.cpp  datasetfetchmodel.h
app/clipboard/: CMakeLists.txt  clipboardmodel.cpp  clipboardmodel.h  clipboardpanel.cpp  clipboardpanel.h  clipboardpanel.ui  clipboardsynccommand.cpp  clipboardsynccommand.h  thumbnailprovider.cpp  thumbnailprovider.h
app/common/: CMakeLists.txt  artefactloadhelper.cpp  artefactloadhelper.h  dashboardsdfpropertyrendering.cpp  dashboardsdfpropertyrendering.h  gravitatemetadata.cpp  gravitatemetadata.h  meshpropertytoolbar.cpp  meshpropertytoolbar.h  propertyselector.cpp  propertyselector.h  resolutionselector.cpp  resolutionselector.h  viewcontainer.cpp  viewcontainer.h  viewselectionbar.cpp  viewselectionbar.h
app/core/: CMakeLists.txt  artefactid.h  gresource.h  groupid.h
app/dialogs/: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui  parameterselectiondialog.cpp  parameterselectiondialog.h  resolutionchangedialog.cpp  resolutionchangedialog.h  textnoteedit.cpp  textnoteedit.h  textnoteedit.ui
app/help/: CMakeLists.txt  helpbrowser.cpp  helpbrowser.h  helpdialog.cpp  helpdialog.h  helpdialog.ui  helphandler.cpp  helphandler.h  stringresources.cpp  stringresources.h
app/metadata/: CMakeLists.txt  artefact3dmetadata.cpp  artefact3dmetadata.h  artefacturladapter.h  metadatamodel.cpp  metadatamodel.h  stringmanipulation.cpp  stringmanipulation.h
app/repository/: CMakeLists.txt  gravitaterepoconf.h  repofix.cpp  repofix.h
docs/help/: .gitignore  CMakeLists.txt  Doxyfile.in  desktop-help.qhcp.in  help_manual.css  manual_footer.html  manual_header.html
docs/help/docs/: faceting.md  feature-recognition.md  fragment.md  geometric-characterization.md  groups.md  index.md  inspection.md  overview.md  reassembly.md
src/annotation/: CMakeLists.txt  annotationdialog.cpp  annotationdialog.h  annotationdialog.ui  annotationhelper.cpp  annotationhelper.h  annotationmodelbase.cpp  annotationmodelbase.h  localannotationmodel.cpp  localannotationmodel.h  partonomywidget.cpp  partonomywidget.h  partonomywidget.ui  skostreeparsersord.cpp  skostreeparsersord.h  term.h  thesaurusmodel.cpp  thesaurusmodel.h
src/input/: CMakeLists.txt  boundingbox.h  facet.cpp  facet.h  houghfeature.h  meshpropertyreader.cpp  meshpropertyreader.h  partannotation.h  reassemblyreader.cpp  reassemblyreader.h  scalarfieldproperty.cpp  scalarfieldproperty.h  scalarfieldreader.cpp  scalarfieldreader.h  threedselector.cpp  threedselector.h  webannotation.cpp  webannotation.h
src/mesh/: CMakeLists.txt
src/mesh/annotation/: annotationcaptions.cpp  annotationcaptions.h  annotationtool.cpp  annotationtool.h  houghfeaturetool.cpp  houghfeaturetool.h  selectiontool.cpp  selectiontool.h  selectionutils.cpp  selectionutils.h
src/mesh/core/: coordinateaxes.cpp  coordinateaxes.h  graphicssettings.h  measuretool.cpp  measuretool.h  mesh.cpp  mesh.h  meshviewwidget.cpp  meshviewwidget.h  meshviewwidget.ui  valuepicker.cpp  valuepicker.h  viewermodule.cpp  viewermodule.h
src/mesh/facet/: facetoverlay.cpp  facetoverlay.h
src/mesh/property/: propertycoloring.cpp  propertycoloring.h  propertyrendering.cpp  propertyrendering.h  transferfunctionfactory.cpp  transferfunctionfactory.h  wireframebox.cpp  wireframebox.h
src/mesh/vtk/: highlightinteractorstyle.h  interactorstylebrushselector.cpp  interactorstylebrushselector.h  interactorstylelazoselector.cpp  interactorstylelazoselector.h  interactorstylevertexpicker.cpp  interactorstylevertexpicker.h
src/util/: CMakeLists.txt  debugmessagehandling.h  demoutils.h  gravitaterepoutils.cpp  gravitaterepoutils.h  math_utils.cpp  math_utils.h  qhashtree.h
tests/: CMakeLists.txt  tests.cpp
tests/app/: CMakeLists.txt
tests/app/backend/: downloader_tests.cpp  featureextraction_jobmanager_integration_tests.cpp  featureextractionalgorithm_tests.cpp  jobmanager_tests.cpp  networkbackendprovider_tests.cpp
tests/app/clipboard/: clipboardmodel_integration_tests.cpp  clipboardmodel_tests.cpp  clipgroupsprovider_tests.cpp  qhashtree_tests.cpp  thumbnailprovider_tests.cpp
tests/app/dialogs/: parameterdialog_tests.cpp
tests/app/help/: stringresources_tests.cpp
tests/app/include/: mockbackendprovider.h  mockdataproviders.h  mockdownloader.h  mockjobmanager.h  mocknetworkaccessmanager.h  qfakenetworkreply.cpp  qfakenetworkreply.h  sparqlreplybuilder.cpp  sparqlreplybuilder.h
tests/app/metadata/: gravitateextrametadata_tests.cpp  metadata3drequest_tests.cpp  metadataapi_tests.cpp
tests/cmake/: MakeGtestBuild.cmake
tests/common/: CMakeLists.txt
tests/include/: qstringprint.h
tests/resources/: test_resources.qrc
(+120 files in other folders)
